// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for player 1 with 5 points 1`] = `
<Text
  style={
    [
      {
        "fontSize": 48,
        "fontWeight": 800,
        "position": "absolute",
      },
      {
        "bottom": "60%",
        "color": "#4c9d00",
        "left": 100,
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      },
    ]
  }
  testID="current-points-value-1"
>
  5
</Text>
`;

exports[`renders correctly for player 2 with 42 points 1`] = `
<Text
  style={
    [
      {
        "fontSize": 48,
        "fontWeight": 800,
        "position": "absolute",
      },
      {
        "color": "#0073e6",
        "right": 100,
        "top": "60%",
      },
    ]
  }
  testID="current-points-value-2"
>
  42
</Text>
`;
